#ifndef LUIGI_H
#define LUIGI_H

#include "Player.h"

class Luigi : public Player {
public:
    Luigi();
    void Draw() override;
};

#endif
