#ifndef PEACH_H
#define PEACH_H

#include "Player.h"

class Peach : public Player {
public:
    Peach();
    void Draw() override;
};

#endif
