@startuml character_system

package "Character System (OOP)" {

    struct InputConfig {
        + leftKey: int
        + rightKey: int
        + jumpKey: int
        + crouchKey: int
        + skill1Key: int
        + skill2Key: int
    }

    abstract class Entity {
        # position: Vector2
        # velocity: Vector2
        + virtual ~Entity()
        + virtual Update(dt: float) = 0
        + virtual Draw() = 0
        + virtual OnCollision(other: Entity*) = 0
    }

    class Character {
        # inputConfig: InputConfig
        # currentState: CharacterState*
        # ability1: AbilityStrategy*
        # ability2: AbilityStrategy*
        + SetInputConfig(config: InputConfig)
        + ChangeState(newState: CharacterState*)
        + SetAbility1(ability: AbilityStrategy*)
        + SetAbility2(ability: AbilityStrategy*)
        + UseAbility1()
        + UseAbility2()
        + Update(dt: float)
        + Draw()
    }
    Entity <|-- Character
    Character --> InputConfig : "has"

    class Player {
        - crouching_: bool
        + Init(startX, startY)
        + Update(dt, worldWidth)
        + Draw()
    }
    Character <|-- Player

    class Goomba {
        + Update(dt, worldWidth)
    }
    Character <|-- Goomba

    class Mario {}
    class Luigi {}
    class Peach {}
    class Toad {}
    class Wario {}

    Player <|-- Mario
    Player <|-- Luigi
    Player <|-- Peach
    Player <|-- Toad
    Player <|-- Wario
}

package "Skill / Ability System (Strategy Pattern)" {
    
    abstract class AbilityStrategy {
        + virtual Execute(character: Character*) = 0
    }

    class FireballAbility {
        + Execute(character: Character*)
    }

    class HighJumpAbility {
        + Execute(character: Character*)
    }

    class FloatAbility {
        + Execute(character: Character*)
    }

    class DashAbility {
        + Execute(character: Character*)
    }

    class GroundPoundAbility {
        + Execute(character: Character*)
    }

    AbilityStrategy <|-- FireballAbility
    AbilityStrategy <|-- HighJumpAbility
    AbilityStrategy <|-- FloatAbility
    AbilityStrategy <|-- DashAbility
    AbilityStrategy <|-- GroundPoundAbility

    Character o--> AbilityStrategy : "uses"
}

package "State System (State Pattern)" {
    abstract class CharacterState {
        + virtual Enter(character: Character*) = 0
        + virtual Update(character: Character*, dt: float) = 0
        + virtual Exit(character: Character*) = 0
    }

    class IdleState {}
    class RunningState {}
    class JumpingState {}

    CharacterState <|-- IdleState
    CharacterState <|-- RunningState
    CharacterState <|-- JumpingState

    Character *--> CharacterState : "owns"
}

package "Factory System" {
    class CharacterFactory <<Singleton>> {
        + CreateCharacter(name: string) : unique_ptr<Character>
    }
    CharacterFactory ..> Player : <<creates>>
    CharacterFactory ..> Goomba : <<creates>>
}

@enduml
